tests/baselines/reference/contextualTyping2.errors.txt
tests/cases/compiler/contextualTyping2.ts(1,32): error TS2322: Type '{ id: number; name: string; }' is not assignable to type '{ id: number; }'.
  Object literal may only specify known properties, and 'name' does not exist in type '{ id: number; }'.


==== tests/cases/compiler/contextualTyping2.ts (1 errors) ====
    var foo: {id:number;} = {id:4, name:"foo"};
                                   ~~~~~~~~~~
!!! error TS2322: Type '{ id: number; name: string; }' is not assignable to type '{ id: number; }'.
!!! error TS2322:   Object literal may only specify known properties, and 'name' does not exist in type '{ id: number; }'.